sk-driver/src/tests/snapshots/sk_driver__tests__mutation_test__itest__mutation_handler_create@true.snap
---
source: sk-driver/src/tests/mutation_test.rs
expression: json_pod
---
Object {
    "apiVersion": String("v1"),
    "kind": String("Pod"),
    "metadata": Object {
        "annotations": Object {
            "simkube.io/kwok-stage-complete-time": String("1970-01-01T00:00:21+00:00"),
            "simkube.io/kwok-stage-create-delay": String("0ms"),
            "simkube.io/kwok-stage-create-delay-jitter": String("0ms"),
            "simkube.io/kwok-stage-ready-delay": String("0ms"),
            "simkube.io/kwok-stage-ready-delay-jitter": String("0ms"),
            "static.simkube.io/original-namespace": String("test-namespace"),
            "static.simkube.io/pod-owner-mtime": String("0"),
            "static.simkube.io/pod-sequence-number": String("0"),
        },
        "labels": Object {
            "foo": String("bar"),
            "simkube.io/kwok-stage-complete": String("true"),
            "simkube.io/simulation": String("test-sim"),
        },
        "name": String("the-pod"),
        "namespace": String("test-namespace"),
        "ownerReferences": Array [
            Object {
                "apiVersion": String("simkube.io/v1"),
                "kind": String(""),
                "name": String("sk-test-driver-12345-root"),
                "uid": String(""),
            },
            Object {
                "apiVersion": String("apps/v1"),
                "kind": String("ReplicaSet"),
                "name": String("the-replicaset"),
                "uid": String("asdfasdf"),
            },
            Object {
                "apiVersion": String("apps/v1"),
                "kind": String("Deployment"),
                "name": String("the-deployment"),
                "uid": String("yuioyoiuy"),
            },
        ],
    },
    "spec": Object {
        "containers": Array [],
        "nodeSelector": Object {
            "boo": String("far"),
            "type": String("virtual"),
        },
        "tolerations": Array [
            Object {
                "effect": String("NoSchedule"),
                "key": String("kwok-provider"),
                "operator": String("Exists"),
            },
        ],
    },
    "status": Object {
        "phase": String("Running"),
    },
}
